# opencac

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  a2a  compose.yaml  opencac  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
scripts/: a2a.sh  opencac.sh
src/a2a_fabric/: __init__.py  audit.py  cli.py  cli_runtime.py  pipeline.py  roles.py  runtime.py  service.py  sidecar.py
src/opencac/: __init__.py  agents.py  audit.py  cli.py  cli_runtime.py  pipeline.py  roles.py  runtime.py  schemas.py  service.py
tests/: test_agent_integration.py  test_cli.py  test_core_pipeline.py  test_packaging.py  test_service.py  test_support.py
