[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencac"
version = "0.1.0"
description = "OpenCAC: Claude Code, Antigravity, and Codex working together across cloud APIs and local models."
requires-python = ">=3.9"
authors = [{ name = "Codex" }]
readme = "README.md"
license = "MIT"
keywords = [
    "opencac",
    "claude-code",
    "codex",
    "antigravity",
    "multi-agent-orchestration",
    "ai-coding-agent-pipeline",
    "claude-code-codex-together",
    "ai-coding-workflow-automation",
    "orchestrate-ai-coding-tools",
    "developer-cli-tools",
    "ai-agent-chaining",
    "reduce-ai-api-cost",
    "local-llm-code-quality",
    "air-gapped-ai-coding",
    "private-ai-code-generation",
    "local-llm",
    "hybrid-ai",
    "jsonl",
    "audit-log",
    "speculative-decoding",
    "llama-cpp",
    "validated-handoff",
    "session-resume",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
opencac = "opencac.cli:main"

[project.urls]
Homepage = "https://github.com/lpoee/opencac"
Repository = "https://github.com/lpoee/opencac"
Issues = "https://github.com/lpoee/opencac/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
